--- a/app/views/designers/new.html.erb
+++ b/app/views/designers/new.html.erb
@@ -7,9 +7,9 @@
   <p class="subtitle-top">Votre contribution</p>
   <h1>Ajouter un/une designer</h1>
   <p class="subtitle">Partagez vos références sur Omniscient Design ! Soumettez vos découvertes et vos connaissances, et notre équipe les validera pour les intégrer à notre base de données. Bientôt, nous récompenserons les contributeurs les plus actifs pour leur précieuse aide !</p>
-  <div class="progress-container-form">
-    <div class="progress-bar-form"></div>
-    <span class="progress-percent-form">0%</span>
+  <div class="progress-container-form" data-controller="progress-form">
+    <div class="progress-bar-form" data-progress-form-target="progressBar"></div>
+    <span class="progress-percent-form" data-progress-form-target="progressPercent">0%</span>
   </div>
 </section>
 <section class="grid-1" style="background-color:#202020; color:#FFF; min-height: 100vh;">
