--- a/app/assets/stylesheets/components/_loader.scss
+++ b/app/assets/stylesheets/components/_loader.scss
@@ -31,9 +31,9 @@
   aspect-ratio: 1/1;
 }
 
-#content {
-  display: none;
-}
+// #content {
+//   display: none;
+// }
 
 @media screen and (min-width: 0px) and (max-width: 1024px) {
   #loading img {
