--- a/app/assets/stylesheets/layout/_search.scss
+++ b/app/assets/stylesheets/layout/_search.scss
@@ -4,7 +4,7 @@
   position: fixed;
   z-index: 900;
   top: 0;
-  width: calc(100vw - 350px);
+  width: calc(100vw - 350px - 20vw);
   height: 100px;
   display: flex;
   align-items: center;
