--- a/app/assets/stylesheets/pages/_searchpage.scss
+++ b/app/assets/stylesheets/pages/_searchpage.scss
@@ -314,7 +314,7 @@
 .card-designer,
 .card-oeuvre {
   background-repeat: no-repeat;
-  width: 100%;
+  width: 10vw;
   height: 280px;
   border-radius: 10px;
   display: flex;
@@ -428,6 +428,7 @@
 
   .card-designer,
   .card-oeuvre {
+    width: calc(40vw - 20px);
     height: 240px;
     padding: 15px;
   }
@@ -502,6 +503,7 @@
 
   .card-designer,
   .card-oeuvre {
+    width: calc(38vw - 20px);
     height: 240px;
     padding: 15px;
   }
@@ -557,6 +559,7 @@
 
   .card-designer,
   .card-oeuvre {
+    width: calc(38vw - 20px);
     height: 240px;
     padding: 15px;
   }
@@ -588,6 +591,7 @@
 
   .card-designer,
   .card-oeuvre {
+    width: calc(24vw - 20px);
     height: 240px;
     padding: 15px;
   }
@@ -620,6 +624,7 @@
 
   .card-designer,
   .card-oeuvre {
+    width: calc(24vw - 36px);
     height: 260px;
     padding: 15px;
   }
